fixing layout issues and data-caption

--- a/css/baguetteBox.css
+++ b/css/baguetteBox.css
@@ -43,7 +43,7 @@
     #baguetteBox-overlay .full-image figcaption {
       display: block;
       position: absolute;
-      bottom: 0;
+      bottom: 10;
       width: 100%;
       text-align: center;
       line-height: 1.8;
