--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@ img {
 * Layout Style
 */
 .container {
-    max-width: 1268px;
+    max-width: 1050px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 250px));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-flow: row;
     grid-gap: 10px;
 }
